# Axologl

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/modules/: FindLibnx.cmake
cmake/toolchains/: DevkitA64Libnx.cmake
include/: axologl.h  file.h  logger.h  types.h
include/loggers/: debug.h  error.h  fatal.h  info.h  notice.h  raw.h  warn.h
test/: main.cpp
